finish LTW with AspectJ